apps/base/wallabag/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag

  template:
    metadata:
      labels:
        app: wallabag
        try: "0"
        policy-type: "app"

    spec:

      containers:
        - name: wallabag
          image: ghcr.io/wallabag/docker:2.6.14

          securityContext:
            allowPrivilegeEscalation: false

          ports:
            - containerPort: 80
              protocol: TCP

      restartPolicy: Always
