apps/base/wallabag/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
spec:
  selector:
    app: wallabag
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
